# ThreadMiner

./: README.md  pyproject.toml
tweet-scraper/: README.md  pyproject.toml
tweet-scraper/conf/base/: logging.yml
tweet-scraper/docs/source/: conf.py  index.rst
tweet-scraper/notebooks/: 02_get-tweets.ipynb  03_data-analysis.ipynb  03_tweepy-threads-via-search.ipynb  04_test-flow.ipynb
tweet-scraper/src/: setup.py
tweet-scraper/src/models/twitter/: tweet.py  user.py
tweet-scraper/src/service/twitter/: thread_service.py  tweet_service.py  user_service.py
tweet-scraper/src/tests/: test_run.py
tweet-scraper/src/tweet_scraper/: __init__.py  __main__.py  settings.py
tweet-scraper/src/util/twitter/: thread_util.py
