[tool.poetry]
name = "tweet-scraper"
version = "0.1.0"
description = ""
authors = ["Luke Skyward <luke.skyward.ai@gmail.com>"]
readme = "README.md"
packages = [{include = "tweet_scraper"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
jupyter = "^1.0.0"
kedro = "^0.18.4"
requests = "^2.28.2"
requests-oauthlib = "^1.3.1"
python-twitter-v2 = "^0.8.1"
tweepy = "^4.12.1"
pandas = "^1.5.3"
tqdm = "^4.64.1"
numpy = "^1.24.1"
beautifulsoup4 = "^4.11.1"
pydantic = "^1.10.4"
plotly = "^5.13.0"
kaleido = "0.2.1"
statsmodels = "^0.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
